[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^3.0.0"
numpy = "1.25.0"
pandas = "2.1.0"
flask-cors = "^4.0.0"
osmnx = "^1.7.1"
geopandas = "^0.14.0"
folium = "^0.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
